--- a/wiki/ClassBinder.wiki
+++ b/wiki/ClassBinder.wiki
@@ -100,6 +100,14 @@ binder.Set( "str",
      WrappedMemVarSetter<MY,std::string, &MY::str> );
 }}}
 
+Or, more succinctly:
+
+{{{
+binder.BindMemVar<std::string,&MY::str>( "str" );
+}}}
+
+which is basically simply a shorthand form of the above (but also uses different default access options for the generated function!).
+
 The `WrappedMemVarSetter<>()` and `WrappedMemVarGetter<>()` templates create functions which set/get the native member using [ConvertingTypes CastFromJS() and CastToJS()]. This means that we can also bind members which are pointers to other wrapped types, and access those transparently via JS. e.g. if the MY type has a member `MY * other`, we can bind that:
 
 {{{
